# ALICE-History

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
bindings/ue5/: AliceHistory.h
bindings/unity/: AliceHistory.cs
src/: core.rs  cosine_table.rs  ffi.rs  frequency.rs  gpu.rs  grid2d.rs  lib.rs  multimodal.rs  nonlinear.rs  solver_1d.rs  sparse.rs  temporal.rs
