[package]
name = "alice-history"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Inverse entropy restoration — reversing information degradation to recover original historical data"
license = "AGPL-3.0-or-later"

[lib]
name = "alice_history"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = []
ffi = ["std"]

[dependencies]
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
